--- a/src/gui/KhachHang_GUI.form
+++ b/src/gui/KhachHang_GUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel_khachHang" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="5" bottom="10" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="829" height="520"/>
+      <xy x="20" y="20" width="846" height="520"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -71,7 +71,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <grid id="433e3" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="433e3" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -83,10 +83,10 @@
             <children>
               <hspacer id="e0da">
                 <constraints>
-                  <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="8537d" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="8537d" class="javax.swing.JTextField" binding="txt_timKiem">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -94,7 +94,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="b7993" class="javax.swing.JButton" binding="btnTimKiem">
+              <component id="b7993" class="javax.swing.JButton" binding="btn_timKiem">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -102,7 +102,7 @@
                   <text value="Tìm kiếm"/>
                 </properties>
               </component>
-              <component id="45967" class="javax.swing.JButton" binding="btnThoat">
+              <component id="45967" class="javax.swing.JButton" binding="btn_thoat">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -110,23 +110,15 @@
                   <text value="Thoát"/>
                 </properties>
               </component>
-              <component id="e1e9d" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="e1e9d" class="javax.swing.JComboBox" binding="cmb_locTrangThai">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
-              <component id="2ae67" class="javax.swing.JButton" binding="ngàySinhButton" default-binding="true">
+              <component id="2498d" class="javax.swing.JButton" binding="btn_hang">
                 <constraints>
                   <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Ngày sinh"/>
-                </properties>
-              </component>
-              <component id="2498d" class="javax.swing.JButton" binding="hạngButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Hạng"/>
@@ -152,14 +144,14 @@
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="1a89f">
+          <scrollpane id="1a89f" binding="src_dsKhachHang">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="703df" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <component id="703df" class="javax.swing.JTable" binding="table_dsKhachHang">
                 <constraints/>
                 <properties/>
               </component>
@@ -191,7 +183,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="79f95" class="javax.swing.JButton" binding="thêmButton" default-binding="true">
+                  <component id="79f95" class="javax.swing.JButton" binding="btn_them">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -251,7 +243,7 @@
                           <text value="Tên khách hàng"/>
                         </properties>
                       </component>
-                      <component id="8549b" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+                      <component id="8549b" class="javax.swing.JTextField" binding="txt_maKH">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -259,7 +251,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="62bc0" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                      <component id="62bc0" class="javax.swing.JTextField" binding="txt_tenKH">
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -267,7 +259,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="676b5" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+                      <component id="676b5" class="javax.swing.JTextField" binding="txt_ngaySinh">
                         <constraints>
                           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -283,7 +275,7 @@
                           <text value="Số điện thoại"/>
                         </properties>
                       </component>
-                      <component id="932de" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+                      <component id="932de" class="javax.swing.JTextField" binding="txt_diaChi">
                         <constraints>
                           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -299,7 +291,7 @@
                           <text value="Địa chỉ"/>
                         </properties>
                       </component>
-                      <component id="4add7" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+                      <component id="4add7" class="javax.swing.JTextField" binding="txt_sdt">
                         <constraints>
                           <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -307,7 +299,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="d192c" class="javax.swing.JLabel">
+                      <component id="d192c" class="javax.swing.JLabel" binding="txt_gioiTinh">
                         <constraints>
                           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -315,7 +307,7 @@
                           <text value="Giới tính"/>
                         </properties>
                       </component>
-                      <component id="37bba" class="javax.swing.JRadioButton" binding="nữRadioButton" default-binding="true">
+                      <component id="37bba" class="javax.swing.JRadioButton" binding="rd_nu">
                         <constraints>
                           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -323,7 +315,7 @@
                           <text value="Nữ"/>
                         </properties>
                       </component>
-                      <component id="8124a" class="javax.swing.JRadioButton" binding="namRadioButton" default-binding="true">
+                      <component id="8124a" class="javax.swing.JRadioButton" binding="rd_nam">
                         <constraints>
                           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -333,7 +325,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="ffd0" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="ffd0" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -341,17 +333,17 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="72d3c" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+                      <component id="72d3c" class="javax.swing.JTextField" binding="txt_diemHang">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="0" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="616e0" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+                      <component id="616e0" class="javax.swing.JTextField" binding="txt_diemThuong">
                         <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="1" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
@@ -381,17 +373,49 @@
                           <text value="Hạng"/>
                         </properties>
                       </component>
-                      <component id="dbd74" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+                      <component id="dbd74" class="javax.swing.JTextField" binding="txt_hang">
                         <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="2" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
                         <properties/>
                       </component>
-                      <vspacer id="17136">
+                      <component id="4c6a0" class="javax.swing.JTextField" binding="txt_ngayDKThanhVien">
                         <constraints>
-                          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties/>
+                      </component>
+                      <component id="8e718" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Ngày ĐK thành viên"/>
+                        </properties>
+                      </component>
+                      <component id="598c" class="javax.swing.JButton" binding="btn_huy">
+                        <constraints>
+                          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                      <component id="77f92" class="javax.swing.JButton" binding="btn_luu">
+                        <constraints>
+                          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                      <vspacer id="d18f4">
+                        <constraints>
+                          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </vspacer>
                     </children>
