--- a/src/gui/QuanLyChuongTrinhKM_GUI.form
+++ b/src/gui/QuanLyChuongTrinhKM_GUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.QuanLyChuongTrinhKM_GUI">
   <grid id="27dc6" binding="panelQuanLyChuongTrinhKhuyenMai" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="5" bottom="10" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="913" height="691"/>
+      <xy x="20" y="20" width="923" height="691"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -174,6 +174,7 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="200"/>
             <preferred-size width="824" height="600"/>
           </grid>
         </constraints>
