--- a/src/gui/ThuocTinhDanhMuc_GUI.form
+++ b/src/gui/ThuocTinhDanhMuc_GUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.ThuocTinhDanhMuc_GUI">
   <grid id="27dc6" binding="panelQuanLyThuocTinh" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="5" bottom="10" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="911" height="679"/>
+      <xy x="20" y="20" width="911" height="808"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -97,7 +97,7 @@
             </properties>
             <border type="none" title="Thông tin chi tiết"/>
             <children>
-              <grid id="3bbce" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="3bbce" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -150,6 +150,20 @@
                   <component id="aa00" class="javax.swing.JComboBox" binding="cmbTrangThai">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="cd3c2" class="javax.swing.JLabel" binding="labelDanhMuc">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Danh mục"/>
+                    </properties>
+                  </component>
+                  <component id="ba0bc" class="javax.swing.JComboBox" binding="cmbDanhMuc">
+                    <constraints>
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
                   </component>
